01-ingress-http-to-https-resources/06_ingress/01_ingress_https.yaml
# Annotations Reference: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-store-https-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "gke-ingress-extip1"
    # Google Managed SSL Certificates
    networking.gke.io/managed-certificates: managed-cert-for-ingress
    # SSL Redirect HTTP to HTTPS
    networking.gke.io/v1beta1.FrontendConfig: "my-frontend-config"
spec:
  defaultBackend:
    service:
      name: ui-np
      port:
        number: 80

# gcloud compute addresses create gke-ingress-extip1 --global
#gcloud compute addresses create gke-ingress-extip1  \
# --global \
# --ip-version IPV4
# gcloud compute addresses describe gke-ingress-extip1 --global 
# gcloud compute addresses list
